fixed inputs overflow

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,7 +9,7 @@
 
 .main_container{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgb(149, 35, 255);
 }
 
@@ -24,7 +24,7 @@
 }
 #user_page > input[type=text]{
  margin: 200px auto;
- width: 400px;
+ width: 300px;
  text-align: center;
  padding: 10px;
  font-size: 50px;
@@ -43,7 +43,7 @@
 
 #user_page > input[type=button]{
 
-    width: 300px;
+    width: 200px;
     height: 50px;
     margin: 30px auto;
     border-radius: 10px;
